--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
   body
     .spacers
       h1
-        marquee(direction='right', ;='', behavior='alternate', width='50%')
+        marquee(direction='right', ;='', behavior='alternate', width='65%')
           | Welcome to SCAR&copy Bakery Application 
         br
         br
@@ -21,9 +21,9 @@ html
           li
             a(href='/add') Add Inventory
           li
-            a(href='/') Information
+            a(href='/information') Information
         block content
 
         .footer
              p SCAR&copy Bakery Application
-             p The Images are sourced from all over the internet
+             p The Images are sourced from multiple places
