--- a/scripts/app.css
+++ b/scripts/app.css
@@ -123,6 +123,36 @@ a:hover {
     margin: 1%;
 }
 
+fieldset{
+    text-align: left;
+    width:75%;
+    display: block;
+}
+
+
+label{
+    width:50%;
+    display:block;
+    
+    
+}
+
+input{
+    text-align: center;
+    display:block;
+    width:100%;
+    height: 20%;
+}
+
+h3{
+    color:#ffcc99;
+}
+
+.button1 {
+    font-size: 20px;
+    color:#cc9900;
+    
+}
 
 .footer {
     background-color: #FFE0C0;
