--- a/views/produce.jade
+++ b/views/produce.jade
@@ -10,6 +10,8 @@ block content
                   h2.item Name: #{items.name}
                   h2.item Type: #{items.type}
                   h2.item Price: €#{items.price}
+                  a.button(href="/deleteproduct/#{items.id}") Delete <br>
+                  a.button(href="/editproducts/#{items.id}") Edit 
                   
          
                   
