--- a/scripts/app.css
+++ b/scripts/app.css
@@ -131,6 +131,10 @@ a:hover {
     background-image: url('/b1.jpeg');
 }
 
+.normal:hover{
+    background-image: url('/appletart.jpg');
+}
+
 
 fieldset{
     text-align: left;
