--- a/views/addemp.jade
+++ b/views/addemp.jade
@@ -13,6 +13,8 @@ block content
                 input(name="role", type="text", placeholder="Enter Employee Role", required, pattern="[a-zA-Z][A-Za-z' -]+{3,15}", title="please enter only letters and spaces, At least three letters needed")
                 label(for="mobile") Mobile Number:
                 input(name="mobile", type="mobile", placeholder="Enter Employee Mobile Number", required, pattern="[0-9]{10,10}", title="please enter a valid 10 digit mobile number")
+                label(name="password")
+                input()
                 button.button5(type="submit", onclick='myFunction()') Add new Employee
            
             script.
