--- a/views/addsupplier.jade
+++ b/views/addsupplier.jade
@@ -13,4 +13,23 @@ block content
                 input(name="phone", type="phone", placeholder="Enter Supplier Landline Number", required, pattern="[0-9]{7,10}")
                 label(for="email") Email:
                 input(name="email", type="email", placeholder="Enter an Email", required, pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$")
+                label(for="password") Password:
+                input#password(placeholder='Password', required='', type='password')
+                label(for="vpassword") Verify Password:
+                input#confirm_password(placeholder='Confirm Password', required='', type='password')
                 button.button(type="submit") Add new Supplier
+                
+              
+              script.
+                var password = document.getElementById("password")
+                , confirm_password = document.getElementById("confirm_password");
+                function validatePassword(){
+                if(password.value != confirm_password.value) {
+                confirm_password.setCustomValidity("Passwords Don't Match");
+                } else {
+                confirm_password.setCustomValidity('');
+                }
+                }
+                password.onchange = validatePassword;
+                confirm_password.onkeyup = validatePassword;
+                
