--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,7 @@ html
           li
             a(href='/produce') Produce
           li
-            a(href='/add') Add Inventory
+            a(href='/add') Add Produce
           li
             a(href='/employees') Employees
           li
