--- a/views/addemp.jade
+++ b/views/addemp.jade
@@ -13,11 +13,22 @@ block content
                 input(name="role", type="text", placeholder="Enter Employee Role", required, pattern="[a-zA-Z][A-Za-z' -]+{3,15}", title="please enter only letters and spaces, At least three letters needed")
                 label(for="mobile") Mobile Number:
                 input(name="mobile", type="mobile", placeholder="Enter Employee Mobile Number", required, pattern="[0-9]{10,10}", title="please enter a valid 10 digit mobile number")
-                label(name="password")
-                input()
-                button.button5(type="submit", onclick='myFunction()') Add new Employee
+                label(for="password") Password:
+                input#password(placeholder='Password', required='', type='password')
+                label(for="vpassword") Verify Password:
+                input#confirm_password(placeholder='Confirm Password', required='', type='password')
+                button.button5(type="submit") Add new Employee
            
+            
             script.
-              function myFunction() {
-              alert("You have added a new Employee\nThank You!");
+              var password = document.getElementById("password")
+              , confirm_password = document.getElementById("confirm_password");
+              function validatePassword(){
+              if(password.value != confirm_password.value) {
+              confirm_password.setCustomValidity("Passwords Don't Match");
+              } else {
+              confirm_password.setCustomValidity('');
               }
+              }
+              password.onchange = validatePassword;
+              confirm_password.onkeyup = validatePassword;
