--- a/views/addsupplier.jade
+++ b/views/addsupplier.jade
@@ -13,9 +13,9 @@ block content
                 input(name="phone", type="phone", placeholder="Enter Supplier Landline Number", required, pattern="[0-9]{7,10}")
                 label(for="email") Email:
                 input(name="email", type="email", placeholder="Enter an Email", required, pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$")
-                label(for="password") Password:
+                label(for="password") Admin Password:
                 input#password(placeholder='Password', required='', type='password')
-                label(for="vpassword") Verify Password:
+                label(for="vpassword") Verify Admin Password:
                 input#confirm_password(placeholder='Confirm Password', required='', type='password')
                 button.button(type="submit") Add new Supplier
                 
