--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,11 +10,11 @@ html
       h1
         marquee(direction='right', ;='', behavior='alternate', width='65%')
           | Welcome to SCAR&copy Bakery Application 
-        br
-        br
-        img#poster.logiIm(alt='lo', src='../logo.jpg' style = "height:5%")
-        br
-        button.button2#show Show/Hide Nav Menu and Log
+      br
+      br
+      img#poster.logiIm(alt='lo', src='../logo.jpg' style = "height:5%")
+      br
+      button.button2#show Show/Hide Nav Menu and Logo
 
         
       .navhold
