--- a/views/editemployee.jade
+++ b/views/editemployee.jade
@@ -18,5 +18,24 @@ block content
                       br
                       label(for="mobile") Mobile:
                       input(style="display:block",name="mobile", type="tel", value="#{emps.mobile}", required, pattern="[0-9]{10,10}", title="please enter a valid 10 digit mobile number")
+                      label(for="password") Admin Password:
+                      input#password(placeholder='Password', required='', type='password')
+                      label(for="vpassword") Verify Admin Password:
+                      input#confirm_password(placeholder='Confirm Password', required='', type='password')
+                      
                       br
                       button.button(type="submit") Edit Employee
+                      
+                      script.
+                        var password = document.getElementById("password")
+                        , confirm_password = document.getElementById("confirm_password");
+                        function validatePassword(){
+                        if(password.value != confirm_password.value) {
+                        confirm_password.setCustomValidity("Passwords Don't Match");
+                        } else {
+                        confirm_password.setCustomValidity('');
+                        }
+                        }
+                        password.onchange = validatePassword;
+                        confirm_password.onkeyup = validatePassword;
+                      
