--- a/views/editsupplier.jade
+++ b/views/editsupplier.jade
@@ -2,8 +2,8 @@ extends layout
 block content
           .row
             h1 Welcome to the edit Employee page
-                 .grid-container 
-                  .item
+                .grid-container 
+                 .item
                   each sups in indThree
                     form(method="post")
                      fieldset
@@ -13,7 +13,7 @@ block content
                       label(for="ingredient") Ingredient Ordered:
                       input(name="ingredient", type="text", value="#{sups.ingredient}", style="display:block")
                       br
-                      label(for="phone") Mobile:
+                      label(for="phone") Landline Number:
                       input(name="phone", type="tel", value="#{sups.phone}", style="display:block")
                       br
                       label(for="email") E-mail:
@@ -22,6 +22,7 @@ block content
                       input#password(placeholder='Password', required='', type='password')
                       label(for="vpassword") Verify Admin Password:
                       input#confirm_password(placeholder='Confirm Password', required='', type='password')
+                      
                       br
                       button.button(type="submit") Edit Supplier
                       
