--- a/views/suppliers.jade
+++ b/views/suppliers.jade
@@ -7,9 +7,9 @@ block content
                 each sups in sup
                  .item 
                   h2.item Id: #{sups.id}
-                  h2.item Name: #{sups.name}
+                  h2.item Supplier Name: #{sups.name}
                   h2.item Ingredient Ordered: #{sups.ingredient}
-                  h2.item phone: #{sups.phone}
+                  h2.item Landline Number: #{sups.phone}
                   h2.item Email: #{sups.email}
                   a.button(href="/deletesupplier/#{sups.id}") Delete <br>
                   a.button(href="/editsupplier/#{sups.id}") Edit
